:bug: Fix product items sizes color in dark mode

--- a/leblanc/components/Product/ProductItem/ProductItemSizes/ProductItemSizes.module.css
+++ b/leblanc/components/Product/ProductItem/ProductItemSizes/ProductItemSizes.module.css
@@ -4,5 +4,6 @@
   @apply flex justify-end;
   & > li {
     @apply ml-3;
+    @apply text-text-primary;
   }
 }
